--- a/Pages/User/Index.cshtml
+++ b/Pages/User/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@page
-@using Microsoft.AspNetCore.Localization;
+@*@using Microsoft.AspNetCore.Localization;*@
 @inject Asp.net5RazorPagesExample.Services.CommonLocalizationService localizer
 @model Asp.net5RazorPagesExample.Pages.User.IndexModel
 
 @{
     ViewData["Title"] = "Index";
- Layout = "~/Pages/Shared/_UserLayout.cshtml";
- var requestCultureFeature = HttpContext.Features.Get<IRequestCultureFeature>();
- var requestCulture = requestCultureFeature.RequestCulture;
+    Layout = "~/Pages/Shared/_UserLayout.cshtml";
+    //var requestCultureFeature = HttpContext.Features.Get<IRequestCultureFeature>();
+    //var requestCulture = requestCultureFeature.RequestCulture;
 
 }
 
